# Med.io

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  app.py  config.py  nul  pyproject.toml  requirements.txt  streamlit_to_webui.md  vercel.json
backend/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Sidebar.jsx
frontend/src/pages/: Chat.jsx  Documents.jsx  Images.jsx
services/: chat_service.py  document_service.py  medical_safety.py  safety_guard.py  vision_service.py
