[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi>=0.117.1", "uvicorn>=0.30.0", "python-multipart>=0.0.9", "streamlit>=1.28.0", "requests>=2.28.0", "opencv-python-headless>=4.8.0", "pillow>=10.0.0", "numpy>=1.24.0", "pypdf2>=3.0.0", "pytesseract>=0.3.10", "pandas>=2.0.0", "psutil>=5.9.0" ]
requires-python = "~=3.12.0"
